# bgmi-event-bot

./: .gitignore  Cargo.toml  README.md
docs/: EVENT_SYSTEM.md  FINDINGS_FINAL.md  GAME_SERVER_PROTOCOL.md  PROTOCOL_ANALYSIS.md  REAL_ANALYSIS.md
src/: main.rs
src/core/: account.rs  captured_auth.rs  crypto.rs  events.rs  game_server.rs  lobby.rs  match_conn.rs  match_sim.rs  mod.rs  orchestrator.rs  protocol.rs  session.rs
src/network/: client.rs  mod.rs  packets.rs
src/ui/: mod.rs  web.rs
static/: index.html
tests/: integration.py
