[package]
name = "bgmi-event-bot"
version = "0.2.0"
edition = "2021"
authors = ["anon"]
description = "BGMI Event Reward Collection Bot - Real Protocol Implementation"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
md5 = "0.7"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5"
anyhow = "1"
thiserror = "1"
bytes = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
urlencoding = "2"
